smart_contracts/contract_macro/tests/templates/no_constructor.stderr
error: custom attribute panicked
  --> $DIR/no_constructor.rs:26:1
   |
26 | #[casperlabs_contract]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: No constructor was present
